<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFileActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/edit_LYT_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/edit_LTY_buttons">

        <TextView
            android:id="@+id/edit_LBL_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/key_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/value_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type_str"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.25"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/edit_BTN_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="#00000000"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_RCV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/edit_LTY_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/edit_BTN_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/confirm_str"/>

        <Button
            android:id="@+id/edit_BTN_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_str"/>

    </LinearLayout>

</RelativeLayout>